test/expected/perr_unexpected_esac.out
shit: 2:1: error: 'esac' has no matching 'case'.
     2 |  esac
       |  ^~~~ here.
